--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html {
     padding: 4em 2em 2em;
     box-sizing: border-box;
     display: flex;
-    background: #C5965F;
+    background: #FA8072;
     border-radius: 10px;
     gap: 2em;
 }
